--- a/recipes/arm-strech.conf
+++ b/recipes/arm-strech.conf
@@ -36,7 +36,7 @@ keyring=debian-archive-keyring
 suite=stretch
 
 [Assets]
-packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd12 libexpat1 libboost-program-options1.62.0 libboost-system1.62.0 libconfig-dev libjsoncpp1 python-requests djmount exiftool
+packages=libasound2 alsa-utils alsa-base sox sqlite3 mpd mpc libupnp6 libmpdclient2 libexpat1 libcurl3 libmicrohttpd12 libexpat1 libboost-program-options1.62.0 libboost-system1.62.0 libconfig-dev libjsoncpp1 python-requests exiftool
 source=http://mirrordirector.raspbian.org/raspbian
 keyring=debian-archive-keyring
 suite=stretch
